log
Tue Apr 15 21:27:57 HSP 2025: 
 tests:  0|6
total_score: 0/70
eeef3b7
Tue, Apr 15, 2025 11:23:07 PM: 
 hashmap.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
4887759
Wed, Apr 16, 2025 12:14:51 AM: 
 hashmap.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  0|0
b8df6f7
Wed, Apr 16, 2025 12:15:26 AM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
64dfcd5
Wed, Apr 16, 2025 12:15:57 AM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
fe70a75
Wed, Apr 16, 2025 12:16:32 AM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
5b0907b
Wed, Apr 16, 2025  8:09:22 AM: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
94ea7b0
Wed, Apr 16, 2025  8:10:04 AM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
dbfb957
Wed, Apr 16, 2025  8:15:03 AM: 
 hashmap.c | 5 +++++
 1 file changed, 5 insertions(+)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'searchMap':
hashmap.c:91:61: error: return makes pointer from integer without a cast [-Werror=int-conversion]
         if(is_equal(key, map->buckets[pos]->key)) return map->current;
                                                          ~~~^~~~~~~~~
cc1.exe: all warnings being treated as errors
2a6f5fa
